# api_weather

./: README.md
take-home-main/: .gitignore  README.md
take-home-main/app/: pyproject.toml
take-home-main/app/mars/: Mars.py  models.py  urls.py  views.py
take-home-main/app/mars/migrations/: 0001_initial.py
take-home-main/app/mars/templates/: mars.html
take-home-main/app/take_home/: settings.py  urls.py  views.py
take-home-main/app/take_home/templates/: index.html
take-home-main/app/weather/: views.py
take-home-main/app/weather/templates/: index.html  weather.html
